--- a/workflows/cloudbuild-apply.yaml
+++ b/workflows/cloudbuild-apply.yaml
@@ -39,6 +39,7 @@ steps:
           -var="github_app_installation_id=${_GITHUB_APP_INSTALLATION_ID}" \
           -var="state_bucket=${_STATE_BUCKET}" \
           -var="cloud_build_sa=${_CLOUD_BUILD_SA}" \
+          -var="alert_email=${_ALERT_EMAIL}" \
           -out=tfplan \
           -no-color || {
           echo "❌ Terraform plan failed!"
@@ -135,3 +136,4 @@ substitutions:
   _GITHUB_REPO_URL: "MUST_BE_PROVIDED"
   _GITHUB_APP_INSTALLATION_ID: "MUST_BE_PROVIDED"
   _CLOUD_BUILD_SA: "MUST_BE_PROVIDED"
+  _ALERT_EMAIL: "MUST_BE_PROVIDED"
